Card titles readability fixed

--- a/resources/assets/sass/front/app.scss
+++ b/resources/assets/sass/front/app.scss
@@ -647,7 +647,7 @@ section {
     }
     .resource-title {
         color:                      $green;
-        line-height:                1.5rem;
+        line-height:                2.2rem;
         margin:                     1rem 0 0.5rem;
     }
     .resource-description {
